k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: auth
spec:
  selector:
    app: auth
  ports:
  - port: 80
    targetPort: 8000
